Firefox header z-index fix.

--- a/app/widgets/awareness/main.scss
+++ b/app/widgets/awareness/main.scss
@@ -243,6 +243,10 @@ section {
   background: $white;
 }
 
+.splash {
+  z-index: 0;
+}
+
 header {
   .photos {
     width: 100%;
